'add_new_block'

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -112,7 +112,6 @@ block content
 						li Режим работы
 						li ПН...ПТ 8:30 &mdash; 20:00
 						li CБ, BC 10:00 &mdash; 16:00
-
 			div.map
 				div(id="map" data-center-x='55.76' data-center-y='37.64' data-zoom='7' data-marker-x='55.76' data-marker-y='37.64')
 				+a('btn-green_border btn-uppercase', 'построить маршрут','#')
@@ -135,7 +134,34 @@ block content
 						div.read-other__close.js-drop-content
 							p Автобусы, Троллейбусы
 							p 34, 3643, 783
-		
+			div.accordion.banks
+				div.accordion-item
+					div.slow-drop.js-drop
+						span.read-other.read-other_black Бпс-банк 
+					div.read-other__close.js-drop-content
+						p Текст текст текст
+						p Текст текст текст
+						p Текст текст текст
+						p Текст текст текст
+						p Текст текст текст
+				div.accordion-item
+					div.slow-drop.js-drop
+						span.read-other.read-other_black Бпс-банк 
+					div.read-other__close.js-drop-content
+						p Текст текст текст
+						p Текст текст текст
+						p Текст текст текст
+						p Текст текст текст
+						p Текст текст текст
+				div.accordion-item
+					div.slow-drop.js-drop
+						span.read-other.read-other_black Бпс-банк 
+					div.read-other__close.js-drop-content
+						p Текст текст текст
+						p Текст текст текст
+						p Текст текст текст
+						p Текст текст текст
+						p Текст текст текст
 		
 	include includes/_footer		
 	
