--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -219,6 +219,38 @@
               </div>
             </div>
           </div>
+          <div class="accordion banks">
+            <div class="accordion-item">
+              <div class="slow-drop js-drop"><span class="read-other read-other_black">Бпс-банк </span></div>
+              <div class="read-other__close js-drop-content">
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="slow-drop js-drop"><span class="read-other read-other_black">Бпс-банк </span></div>
+              <div class="read-other__close js-drop-content">
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="slow-drop js-drop"><span class="read-other read-other_black">Бпс-банк </span></div>
+              <div class="read-other__close js-drop-content">
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+                <p>Текст текст текст</p>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
       <footer>
