--- a/bitrix/templates/main/price.html
+++ b/bitrix/templates/main/price.html
@@ -54,6 +54,44 @@
                               <object><a class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</a></object></a>
           </div>
         </section>
+        <section class="wrapp-banks">
+          <div class="accordion banks">
+            <div class="accordion-item">
+              <div class="slow-drop js-drop"><span class="read-other read-other_black">Бпс-банк</span><svg class='read-svg-arrow' version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129"><path d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"/></svg></div>
+              <div class="read-other__close js-drop-content">
+                <div class="wrapp_loyalty_list">
+                  <h4>Список участников</h4>
+                  <ul>
+                                    <li><a href="www.zov-minsk.by" target="_blank">
+                                        <div>
+                                          <p>Кухни Зов</p><a class="links" href="www.zov-minsk.by" target="_blank">www.zov-minsk.by</a>
+                                        </div>
+                                        <div>
+                                          <p>5%</p>
+                                          <p class="note">(Скидка суммируется с другими скидками продавца)</p>
+                                        </div></a></li>
+                                    <li><a href="www.papakarlo.by" target="_blank">
+                                        <div>
+                                          <p>Папа карло (мебель своими руками и ногами)</p><a class="links" href="www.papakarlo.by" target="_blank">www.papakarlo.by</a>
+                                        </div>
+                                        <div>
+                                          <p>15%-20%</p>
+                                          <p class="note"></p>
+                                        </div></a></li>
+                                    <li><a href="www.zov-minsk.by" target="_blank">
+                                        <div>
+                                          <p>Кухни Зов</p><a class="links" href="www.zov-minsk.by" target="_blank">www.zov-minsk.by</a>
+                                        </div>
+                                        <div>
+                                          <p>5%</p>
+                                          <p class="note"></p>
+                                        </div></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="title-back_link">
           <div class="back_link"><a class="links" href="/">
                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 135 100"><path d="m43.49579,3.54208c1.87973,-1.87971 4.83902,-1.87971 6.71872,0c1.81622,1.81622 1.81622,4.83902 0,6.651l-34.06784,34.06787l112.41928,0c2.62061,0 4.77127,2.08295 4.77127,4.70354c0,2.62061 -2.15067,4.77129 -4.77127,4.77129l-112.41928,0l34.06784,34.00435c1.81622,1.87971 1.81622,4.90675 0,6.71873c-1.8797,1.87973 -4.83899,1.87973 -6.71872,0l-42.13289,-42.13287c-1.81622,-1.81622 -1.81622,-4.83902 0,-6.651l42.13289,-42.1329l0,-0.00001z" stroke-width="0"/></svg><span> Назад на главную</span></a></div>
