--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -542,6 +542,12 @@
 		margin-left: 10px;
 	}
 }
+.read-svg-arrow {
+	width: 20px;
+	position: relative;
+	top: 3px;
+	margin-left: 10px;
+}
 .read-other_green {
 	color: $prime-color;
 	border-bottom: 3px dotted $prime-color;
