'add_fix_xiomi'

--- a/src/sass/_primary.scss
+++ b/src/sass/_primary.scss
@@ -50,7 +50,7 @@ a {text-decoration: none;}
     // justify-content: space-between;
     height: 100%;
 }
-.wrapp-index-page, .wrapp-price-page, .wrapp-news-page, .wrapp-news-one-page, .wrapp-loyalty-program-page, .wrapp-foto-gallery-page, .wrapp-filters, .wrapp-filter-resalt-page, .wrapp-filters-resalt-item-page, .wrapp-contacts-page, .wrapp-about-quarter-page {
+.title-back_link, .title-news_shares_one, .title-about, .title-breadcrumbs, .title-logo_quarter, .wrapp-index-page, .wrapp-price-page, .wrapp-news-page, .wrapp-news-one-page, .wrapp-loyalty-program-page, .wrapp-foto-gallery-page, .wrapp-filters, .wrapp-filter-resalt-page, .wrapp-filters-resalt-item-page, .wrapp-contacts-page, .wrapp-about-quarter-page {
 	flex: 1 0 auto;
 }
 
