'add_fix_close_btn'

--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -343,9 +343,9 @@
 	.wrapp-modal-advantage .modal-advantage .close svg {
 		margin-left: 125px;
 	}
-	.wrapp-menu-logo p svg {
-		top: -40px;
-	}
+	// .wrapp-menu-logo p svg {
+	// 	top: -40px;
+	// }
 	.map {
 		div {
 			height: 300px;
@@ -366,9 +366,9 @@
 	.wrapp-modal-advantages .modal-advantages .close svg {
 		margin-left: 120px;
 	}
-	.wrapp-menu-logo p svg {
-		top: -36px;
-	}
+	// .wrapp-menu-logo p svg {
+	// 	top: -36px;
+	// }
 	.wrapp_filter_result_item ul li h4 {
 		font-size: 2rem; 
 	}
