--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -420,12 +420,17 @@
 	p {
 		svg {
 			width: 30px;
-			float: right;
+			height: 30px;
 			fill: #fff;
-			position: relative;
-			top: -42px;
-			left: -10px;
-			transition: all .25s 
+			position: absolute;
+			top: 45px;
+			right: 30px;
+			transition: all .25s;
+			z-index: 101;
+			// float: right;
+			// position: relative;
+			// top: -42px;
+			// left: -10px;
 		}
 	}
 }
@@ -838,7 +843,7 @@
 }
 
 .menu_mobile {
-	position: absolute;
+	position: fixed;
 	z-index: 100;
 	width: 100%;
 	height: 100%;
